@@ -190,6 +190,11 @@ BUG FIXES
     o	Workaround added for FreeBSD which does not have alloca.h _and_
 	does not allow alloca() to be declared.
 
+    o	identify() now respects 'cex'.  (PR#660)
+
+	Warnings from identify() are now printed immediately even on
+	consoles with delayed printing.
+
 
 
 		CHANGES IN R VERSION 2.1.0
@@ -645,7 +650,7 @@ INTERNATIONALIZATION
 	multi-byte locales on suitably equipped OSes if configured
 	with option --enable-mbcs (which is the default).  [The
 	changes to font handling in the X11 module are based on the
-	Japanization patches of Eiji Nakama.]
+	Japanization patches of Ei-ji Nakama.]
 
 	Windows versions of R can be used in `East Asian' locales on
 	suitable versions of Windows.
